# wm-marl

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  THIRD_PARTY_NOTICES.md  discrete.md  pod_gpu_check.sh  pyproject.toml
artifacts/coin_flow_policy_20260617T092559Z/: distribution_validation.json  outcome.json
artifacts/dmc_jepa/: policy_rollout.json  summary.json
configs/: train_e2e.example.yaml
configs/dreamerv3/: dmc_proprio.yaml
docs/designs/: 2026-07-10-dmc-pixel-evaluation.md
docs/superpowers/plans/: 2026-07-01-train-config-split.md  2026-07-10-dmc-pixel-evaluation.md
docs/superpowers/specs/: 2026-07-01-train-config-split-design.md  2026-07-20-ppo-action-conditioned-visual-world-models-design.md
docs/world-models/jafar-jasmine/: CHANGES.md  PLAN.md
notebooks/: test_flow_matching_env_jax.ipynb
reports/brax_diagnostics/h200_6env_20260625T153125Z/: diagnostics.md
reports/brax_diagnostics/h200_6env_20260625T153244Z/: summary.csv  summary.json
reports/brax_diagnostics/paper_reacher_20260627T095036Z/: paper_return_vs_env_steps.csv  paper_train_loss.csv
reports/brax_diagnostics/paper_reacher_20260627T103410Z/: paper_return_vs_env_steps.csv
reports/brax_diagnostics/paper_reacher_500k_norm_20260627T104530Z/: paper_return_vs_env_steps.csv
reports/brax_diagnostics/reacher_pusher_coverage_h200_20260625T195156Z/: diagnostics.md  policy_diagnostics.csv  summary.csv  summary.json
reports/brax_diagnostics/reacher_pusher_coverage_h200_20260625T201455Z/: diagnostics.md  policy_diagnostics.csv  summary.csv  summary.json
reports/brax_diagnostics/reacher_vs_ppo_500k_20260627T093307Z/: diagnostics.md  policy_diagnostics.csv  sample_efficiency.csv  summary.csv  summary.json
reports/jepa_actor_objective_diagnostics_20260712/: SUMMARY.md
reports/jepa_crossover_diagnostics_20260712/: SUMMARY.md
reports/jepa_interleaving_diagnostics_20260712/: SUMMARY.md
reports/jepa_policy_ratio_diagnostics_20260712/: SUMMARY.md
reports/jepa_reacher_easy_500k_baseline_20260718/: ALGORITHM_AUDIT.md  CODE_INVENTORY.md  IMPROVEMENT_ROADMAP.md  README.md  TERMINAL_CONTRACT_RESULT.md  manifest.json  results.json
reports/jepa_reacher_easy_500k_streamlined_20260719/: README.md  SHA256SUMS  continuation_status.json  manifest.json  prefix_gate.json  results.json  seed1_checkpoint_metadata.json  seed2_checkpoint_metadata.json
reports/jepa_reset_rich_diagnostics_20260712/: SUMMARY.md
reports/jepa_streamlining_20260719/: EXPERIMENT_PROTOCOL.md
src/baselines/: softmax_model.py
src/flow_matching/: ARCHITECTURE.md  __init__.py  distributions.py  models.py  paths.py  plot.py  simulate.py  train.py
src/flow_matching/llada2/: __init__.py  models.py  paths.py  simulate.py  train.py
src/world_marl/: __init__.py  action_flow.py  checkpointing.py  coin_flow.py  coin_flow_experiments.py  coingame_dynamics.py  config.py  determinism.py  evaluation.py  logging.py  policy_loading.py  runpod.py  state_model.py  training.py  visualize.py  world_model.py  world_model_training.py
src/world_marl/algs/: __init__.py  gae.py  ippo.py  mappo.py  networks.py
src/world_marl/baselines/: __init__.py
src/world_marl/checkpoint/: policy.py  train_state.py
src/world_marl/dreamer_v3_baseline/: ARCHITECTURE.md  CONFORMANCE.md  SOURCE_CONFORMANCE.md  __init__.py  config.py  imagination.py  losses.py  models.py  optimizer.py  replay.py  rssm.py  training.py  validation.py
src/world_marl/envs/: __init__.py  brax_adapter.py  dmc_adapter.py  dmc_pixel_adapter.py  gymnax_adapter.py  jaxmarl_coin_adapter.py  meltingpot_adapter.py  pixel_control_adapter.py  playground_dmc_adapter.py  utils.py
src/world_marl/genie2_continuous_jax/: ARCHITECTURE.md  CONFORMANCE.md  SOURCE_CONFORMANCE.md  __init__.py  action_bridge.py  autoencoder.py  config.py  dynamics.py  lam.py  policy.py  rl_heads.py  sampling.py  st_transformer.py  training.py  validation.py
src/world_marl/genie_like_jax/: ARCHITECTURE.md
src/world_marl/genwm/: __init__.py  cem.py  genie.py  imagination.py  models.py  tokenizer.py  world_model.py
src/world_marl/jafar/: ARCHITECTURE.md  SOURCE_CONFORMANCE.md  __init__.py  config.py  dynamics.py  lam.py  model.py  nn.py  preprocess.py  sampling.py  tokenizer.py  training.py
src/world_marl/jasmine/: ARCHITECTURE.md  SOURCE_CONFORMANCE.md  __init__.py  config.py  dynamics.py  lam.py  model.py  nn.py  preprocess.py  sampling.py  tokenizer.py  training.py
src/world_marl/jepa/: ARCHITECTURE.md  __init__.py  config.py  decoder.py  models.py  replay.py  reporting.py  reproducibility.py  schedule.py  training.py  training_snapshot.py  validation.py
src/world_marl/latent_action_world_model/: __init__.py  bridge.py  heads.py  policy.py  replay.py  runner.py  simulator.py
src/world_marl/scripts/: benchmark_dmc_pixels.py  benchmark_policy.py  branch_jepa_counterfactuals.py  cem_dmc_jepa.py  compare_single_wm.py  compare_visual_wm.py  compare_world_models.py  diagnose_jepa_determinism.py  diagnose_jepa_determinism_bootstrap.py  diagnose_jepa_outcome_buckets.py  eval_dmc_dreamerv3.py  (+36 more)
tests/: conftest.py  smoke_test_cem.py  test_adapter.py  test_benchmark_dmc_pixels.py  test_benchmark_policy.py  test_brax_adapter.py  test_cem.py  test_cem_smoke.py  test_checkpointing.py  test_coin_flow.py  test_coingame_dynamics.py  test_collect_rollout_scan.py  test_compare_visual_wm.py  test_compare_world_models_args.py  test_config_and_wandb.py  test_determinism.py  test_dmc_adapter.py  test_dmc_jepa_render.py  test_dmc_jepa_visuals.py  test_dmc_pixel_adapter.py  test_dmc_vector_launcher.py  test_dreamer_v3_baseline.py  test_dreamer_v3_conformance.py  test_dreamerv3_artifacts.py  test_dreamerv3_checkpoints.py  test_dreamerv3_environment.py  test_dreamerv3_integration.py  test_dreamerv3_launcher.py  test_eval_dmc_jepa.py  test_evaluation.py  test_evaluation_parity.py  test_evaluation_scan.py  test_flow_matching_discrete.py  test_frontier_world_model_quality.py  test_gae.py  test_genie2_conformance.py  test_genie2_continuous_jax.py  test_genwm.py  test_genwm_genie.py  test_genwm_latent.py  (+44 more)
(+14 files in other folders)
