[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=69", "wheel"]

[project]
dependencies = [
  "distrax",
  "dm-meltingpot==2.4.0",
  "dmlab2d==1.0.0",
  "flax",
  "gymnax==0.0.9",
  "jax==0.4.36",
  "jaxlib==0.4.36",
  "jaxmarl[algs]==0.1.0",
  "matplotlib",
  "numpy",
  "omegaconf",
  "optax",
  "shimmy[meltingpot]==2.0.1",
  "tqdm",
  "wandb",
]
description = "JaxMARL-style PPO validation on Melting Pot substrates through Shimmy."
name = "world-marl"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

[project.optional-dependencies]
brax = ["brax==0.10.3"]
cuda12 = ["jax[cuda12]==0.4.36"]
dev = ["pre-commit>=4.6", "pytest>=8", "ruff==0.15.18"]
dmc = ["dm-control>=1.0"]
hpo = ["optuna>=3.6"]

[project.scripts]
world-marl-benchmark-policy = "world_marl.scripts.benchmark_policy:main"
world-marl-benchmark-dmc-pixels = "world_marl.scripts.benchmark_dmc_pixels:main"
world-marl-compare-single-wm = "world_marl.scripts.compare_single_wm:main"
world-marl-compare-visual-wm = "world_marl.scripts.compare_visual_wm:main"
world-marl-optuna-dmc-jepa = "world_marl.scripts.optuna_dmc_jepa:main"
world-marl-optuna-single-genwm = "world_marl.scripts.optuna_single_genwm:main"
world-marl-plot-brax-diagnostics = "world_marl.scripts.plot_brax_diagnostics:main"
world-marl-plot-wm-curves = "world_marl.scripts.plot_wm_curves:main"
world-marl-plot-wm-losses = "world_marl.scripts.plot_wm_losses:main"
world-marl-train-brax-ppo = "world_marl.scripts.train_brax_ppo:main"
world-marl-train-dmc-jepa = "world_marl.scripts.train_dmc_jepa:main"
world-marl-train-e2e = "world_marl.scripts.train_e2e:main"
world-marl-train-single-genwm = "world_marl.scripts.train_single_genwm:main"
world-marl-verify-install = "world_marl.scripts.verify_install:main"
world-marl-write-dmc-vector-launcher = "world_marl.scripts.write_dmc_vector_launcher:main"
world-marl-runpod = "world_marl.runpod:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: tests requiring installed Melting Pot/dmlab2d runtime",
]
testpaths = ["tests"]
pythonpath = ["."]

[tool.basedpyright]
exclude = [".venv"]

[tool.ruff]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
