[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-marl"
version = "0.1.0"
description = "JaxMARL-style PPO validation on Melting Pot substrates through Shimmy."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "jax==0.4.36",
  "jaxlib==0.4.36",
  "jaxmarl[algs]==0.1.0",
  "gymnax==0.0.9",
  "flax",
  "distrax",
  "optax",
  "numpy",
  "matplotlib",
  "tqdm",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.3",
  "pytest>=8",
  "ruff==0.15.18",
]
cuda12 = [
  "jax[cuda12]==0.4.36",
]
dmc = [
  "dm-control>=1.0",
]
brax = [
  "brax==0.10.3",
]
tracking = [
  "wandb>=0.17",
  "imageio[ffmpeg]>=2.34",
]
meltingpot = [
  "dm-meltingpot==2.4.0",
  "dmlab2d==1.0.0",
  "shimmy[meltingpot]==2.0.1",
]

[project.scripts]
world-marl-verify-install = "world_marl.scripts.verify_install:main"
world-marl-train-e2e = "world_marl.scripts.train_e2e:main"
world-marl-train-brax-ppo = "world_marl.scripts.train_brax_ppo:main"
world-marl-train-dmc-jepa = "world_marl.scripts.train_dmc_jepa_bootstrap:main"
world-marl-validate-dmc-world-model = "world_marl.scripts.train_dmc_jepa_bootstrap:main"
world-marl-validate-single-agent-world-model = "world_marl.scripts.train_dmc_jepa_bootstrap:main"
world-marl-eval-jepa-wm = "world_marl.scripts.eval_jepa_wm:main"
world-marl-rank-jepa-futures = "world_marl.scripts.rank_jepa_futures:main"
world-marl-branch-jepa-counterfactuals = "world_marl.scripts.branch_jepa_counterfactuals:main"
world-marl-cem-dmc-jepa = "world_marl.scripts.cem_dmc_jepa:main"
world-marl-diagnose-jepa-determinism = "world_marl.scripts.diagnose_jepa_determinism_bootstrap:main"
world-marl-plot-brax-diagnostics = "world_marl.scripts.plot_brax_diagnostics:main"
world-marl-plot-dmc-reacher-benchmark = "world_marl.scripts.plot_dmc_reacher_benchmark:main"
world-marl-write-dmc-vector-launcher = "world_marl.scripts.write_dmc_vector_launcher:main"
world-marl-setup-dreamerv3 = "world_marl.scripts.setup_dreamerv3:main"
world-marl-train-dmc-dreamerv3 = "world_marl.scripts.train_dmc_dreamerv3:main"
world-marl-eval-dmc-dreamerv3 = "world_marl.scripts.eval_dmc_dreamerv3:main"
world-marl-normalize-dreamerv3 = "world_marl.scripts.normalize_dreamerv3_run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests requiring installed Melting Pot/dmlab2d runtime",
  "dreamerv3_integration: tests requiring the isolated DreamerV3 runtime",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
